--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "tsx.js",
   "dependencies": {
+    "@types/node": "^10.3.2"
   },
   "devDependencies": {
     "mocha": "^5.2.0"
